--- a/src/layouts/mainLayOut/mainLayOut.module.css
+++ b/src/layouts/mainLayOut/mainLayOut.module.css
@@ -11,9 +11,9 @@
   justify-content: center;
   align-items: center;
 
-  backdrop-filter: blur(4px);
+  /* backdrop-filter: blur(4px);
   background: rgba(200, 200, 200, 0.2);
-  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.3);
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.3); */
 
   color: white;
   font-size: 1.5rem;
